# ebo

./: .gitmodules  CMakeLists.txt  README.md
.cmake/: eboConfig.cmake
.cmake/tests/: CMakeLists.txt
cmake/: CTestCustom.cmake  shacl-ebo-config.cmake
examples/1/: CMakeLists.txt  higherOrderFunction.example.cpp
include/shacl/: CMakeLists.txt
include/shacl/ebo/test/: CMakeLists.txt
src/shacl/: CMakeLists.txt  ebo.hpp
src/shacl/ebo/test/: CMakeLists.txt  ebo.test.cpp
tests/Fortran/TempArrays/: CMakeLists.txt
